ui of login/register/home done while done some adjustments to backend

--- a/Frontend/client/src/app/app.html
+++ b/Frontend/client/src/app/app.html
@@ -1,8 +1,11 @@
-<header><app-nav></app-nav></header>
-
-<div class="mainContianer">
 
 
+<app-nav></app-nav>
 
+<div class="mainContainer">
+
+  <app-home></app-home>
 
 </div>
+
+
