applied database normalization , refactored code to follow clean architecture

--- a/Frontend/client/src/app/app.html
+++ b/Frontend/client/src/app/app.html
@@ -1,4 +1,4 @@
-<div [attr.data-bs-theme]="currentTheme">
+<div class="app-wrapper" [attr.data-bs-theme]="currentTheme">
   <app-nav></app-nav>
 
   <div class="main-content">
