--- a/Frontend/client/src/app/nav/nav.html
+++ b/Frontend/client/src/app/nav/nav.html
@@ -1,4 +1,4 @@
-<div class="navbar-wrapper px-3 pt-2">
+<div class="navbar-wrapper px-3">
   <nav class="navbar navbar-expand-lg scrolling-navbar"
        [ngClass]="{
          'overlay-navbar': isHomePage && !(user$ | async),
