--- a/Frontend/client/src/app/memeber-profile/memeber-profile.html
+++ b/Frontend/client/src/app/memeber-profile/memeber-profile.html
@@ -60,78 +60,25 @@
     <h3>{{ user?.username }} {{ 'PROFILE.POSTS_TITLE' | translate }}</h3>
 
     <div class="posts-container">
-      <div class="post" *ngFor="let post of user?.posts">
-        <div class="post-header">
-          <img [src]="user?.avatar || 'assets/default.jpg'" class="post-avatar" alt="avatar">
-          <div>
-            <div class="post-username">{{ user?.username }}</div>
-            <div class="post-date">{{ post?.createdAt | date:'medium' }}</div>
+      <!--not to self rather than sending user send only needed fields rather than sending the full allusermodel dto-->
+      <ng-container *ngIf="user?.posts as posts">
+        <ng-container *ngIf="posts.length > 0; else noPosts">
+          <div class="member-profile-container">
+            <app-post *ngFor="let post of posts;"
+                      [post]="post"
+                      [user]="{username: user?.username, avatar: user?.avatar}">
+            </app-post>
           </div>
-        </div>
+        </ng-container>
+      </ng-container>
 
-        <div class="post-content">
-          <p>{{ post?.content }}</p>
-        </div>
-
-        <!-- Action Area -->
-        <div class="row g-1 mt-3">
-          <!-- Impressions -->
-          <div class="col-6 text-center position-relative">
-            <a href="javascript:void(0)"
-               class="text-primary text-decoration-underline small mb-1 d-inline-block position-relative z-1">
-              {{ post?.impressions?.length || 0 }} Impressions
-            </a>
-
-            <div class="reaction-container d-inline-block position-relative">
-              <button class="btn btn-light btn-sm rounded-pill d-flex align-items-center gap-2">
-                [ngClass]="{ 'reaction-selected': selectedReactions[post.id] }">
-                <img *ngIf="selectedReactions[post.id]"
-                     [src]="reactionIcons[selectedReactions[post.id]]"
-                     class="reaction-icon"
-                     style="width: 18px; height: 18px;" />
-                {{ selectedReactions[post.id] || 'Like' }}
-              </button>
-
-              <div class="reactions-menu position-absolute bg-body shadow p-2 rounded-pill">
-                <img src="assets/reactions/like.png" alt="Like" class="reaction-icon"
-                     (click)="leaveImpression('Like', post.id)" />
-                <img src="assets/reactions/love.png" alt="Love" class="reaction-icon"
-                     (click)="leaveImpression('Love', post.id)" />
-                <img src="assets/reactions/care.png" alt="Care" class="reaction-icon"
-                     (click)="leaveImpression('Care', post.id)" />
-                <img src="assets/reactions/sad.png" alt="Sad" class="reaction-icon"
-                     (click)="leaveImpression('Sad', post.id)" />
-                <img src="assets/reactions/angry.png" alt="Angry" class="reaction-icon"
-                     (click)="leaveImpression('Angry', post.id)" />
-              </div>
-            </div>
-          </div>
-
-          <!-- Comments -->
-          <div class="col-6 text-center">
-            <a href="javascript:void(0)"
-               (click)="openComments(post.id)"
-               class="text-primary text-decoration-underline small mb-1 d-inline-block">
-              {{ post?.comments?.length || 0 }} Comments
-            </a>
+      <ng-template #noPosts>
+        <div class="text-muted text-center">No posts yet.</div>
+      </ng-template>
 
 
-            <button class="btn btn-light w-100 btn-sm rounded-pill"
-                    (click)="openComments(post.id)">
-              Comment
-            </button>
-
-          </div>
-        </div>
-
-        <app-comment-section *ngIf="openPostId === post.id"
-                             [postData]="post.comments"
-                             (close)="closeComments()">
-        </app-comment-section>
 
 
-      </div>
     </div>
   </div>
-
 
