--- a/Frontend/client/src/app/feed/feed.html
+++ b/Frontend/client/src/app/feed/feed.html
@@ -1,21 +1,14 @@
 <div class="feed-wrapper">
   <div class="feed-container container py-4">
     <div class="row justify-content-center">
-      <div class="col-md-8" *ngFor="let post of posts">
-        <div class="card mb-4 shadow-sm rounded-4">
-          <div class="card-header d-flex align-items-center border-0">
-            <img [src]="post.avatar" alt="avatar" class="rounded-circle me-2" width="40" height="40">
-            <div>
-              <strong>{{ post.username }}</strong>
-              <div class="text-muted small">{{ post.timestamp | date:'short' }}</div>
-            </div>
+      <ng-container *ngIf="feedPosts.length > 0; else noPosts">
+          <div *ngFor="let item of feedPosts">
+            <app-post [post]="item.post" [user]="item.user"></app-post>
           </div>
-          <img [src]="post.image" class="card-img-top rounded-0" alt="post image">
-          <div class="card-body">
-            <p class="card-text">{{ post.caption }}</p>
-          </div>
-        </div>
-      </div>
+        </ng-container>
+      <ng-template #noPosts>
+        <div class="text-muted text-center">No posts yet.</div>
+      </ng-template>
     </div>
-  </div>
+    </div>
   </div>
