--- a/Frontend/client/src/app/app.html
+++ b/Frontend/client/src/app/app.html
@@ -1,4 +1,10 @@
 <div class="app-wrapper" [attr.data-bs-theme]="currentTheme">
+  <ngx-spinner>
+    <h3>
+      Loading...
+    </h3>
+  </ngx-spinner>
+
   <app-nav></app-nav>
 
   <div class="main-content">
